--- a/math.bib
+++ b/math.bib
@@ -5891,7 +5891,11 @@ MRREVIEWER = {Ramendra Krishna Bose},
 
 
 
-
-
-
-
+@inproceedings{gorham2017measuring,
+  title={Measuring sample quality with kernels},
+  author={Gorham, Jackson and Mackey, Lester},
+  booktitle={International Conference on Machine Learning},
+  pages={1292--1301},
+  year={2017},
+  organization={PMLR}
+}
