--- a/main.tex
+++ b/main.tex
@@ -27,7 +27,7 @@
 \usepackage{amsfonts}       % blackboard math symbols
 \usepackage{nicefrac}       % compact symbols for 1/2, etc.
 \usepackage{microtype}      % microtypography
-
+\usepackage{xcolor}
 \usepackage{graphicx}
 \usepackage{subfigure}
 \usepackage{booktabs} % for professional tables
@@ -615,6 +615,26 @@ Since $\cF(\mu_0) = \tilde{\cO}(d)$,
     \frac{\cF(\mu_0)}{\gamma} = \tilde{\cO}\left(M\lambda{d}^{3/2}\right).
 \end{equation}
 Let $\varepsilon > 0$. To output $\mu_p$ such that $I_{\st}(\mu_p|\pi)$, it suffices to ensure that $\frac{2\cF(\mu_0)}{n\gamma} \leq \varepsilon$, therefore, $\frac{2\cF(\mu_0)}{\gamma \varepsilon} = \tilde{\cO}\left(\frac{M\lambda{d}^{3/2}}{\varepsilon}\right)$ iterations are sufficient.
+
+\section{Proofs related to SVSGD}
+We now study VR-SVSGD, \textit{i.e.}, the update 
+\begin{equation*}
+    \mu_{n+1} = (I - \gamma g_n) \# \mu_n,
+\end{equation*}
+where $g_n = P_{\mu_n} \left(v_n + \nabla \log(\mu_n)\right)$ and $v_n$ is a stochastic gradient, \textit{i.e.}, $\E_n v_n(\cdot) = \nabla F(\cdot)$. For simplicity, we assume that the stochastic gradient has a bounded variance, \textit{i.e.}, $\E \|P_{\mu_n} v_n - P_{\mu_n} \nabla F\|_{\cH} \leq \sigma$. By applying Proposition~\ref{prop:TL}, we have
+that if $\gamma \|g_n\|_{\cH} \leq \frac{\alpha-1}{\alpha B}$. Then,
+    \begin{equation*}
+        \cF(\mu_{n+1}) \leq \cF(\mu_{n}) - \gamma\ps{h_{\mu_n},g_n}_{\cH} +  \frac{\gamma^2 K}{2}\|g_n\|_{\cH}^2,
+    \end{equation*}
+    where $K = (\alpha^2 + M)B$. Since $\E \|g_n\|_{\cH}^2 = \E \|g_n - h_{\mu_n}\|_{\cH}^2 + \E \|h_{\mu_n}\|_{\cH}^2 = \E \|P_{\mu_n} v_n - P_{\mu_n} \nabla F\|_{\cH}^2 + \E \|h_{\mu_n}\|_{\cH}^2,$
+    \begin{equation*}
+        \E\cF(\mu_{n+1}) \leq \E \cF(\mu_{n}) - \gamma\E\|h_{\mu_n}\|_{\cH}^2 +  \frac{\gamma^2 K}{2}\left(\E \|h_{\mu_n}\|_{\cH}^2+\sigma^2\right).
+    \end{equation*}
+    Finally, if $\gamma \|g_n\|_{\cH} \leq \frac{\alpha-1}{\alpha B}$ \textbf{almost surely},
+    \begin{equation*}
+        \E\cF(\mu_{n+1}) \leq \E \cF(\mu_{n}) - \gamma\left(1-\frac{\gamma K}{2}\right)I_{\st}(\mu_n|\pi) +  \frac{\gamma^2 K}{2}\sigma^2.
+    \end{equation*}
+    {\color{red} The condition on the step size depends on $n$. We could get rid of $n$ as in the proof of SVGD (section above) by proving that $\|g_n\|_{\cH} \leq \phi(\E\cF(\mu_n))$, where $\phi$ is a non decreasing function. But this is not true in general, we can only have $\E \|g_n\|_{\cH} \leq \phi(\E \cF(\mu_n))$ using Talagrand's inequality as in the last section. \textbf{So, what bothers us is the fact that the condition on the step size must hold almost surely instead of in expectation}. We can always assume a uniform bound $\|g_n\|_{\cH} < C$ a.s. for every $n$, but we don't want to do that since our final the goal is to study a Variance Reduced version of SVSGD.}
 \section{Proofs related to VR-SVSGD}
 \subsection{Proof of Theorem~\ref{th:vrsvsgd}}
 We now study VR-SVSGD, \textit{i.e.}, the update 
