--- a/main.tex
+++ b/main.tex
@@ -205,7 +205,7 @@ We denote the feature map by $\Phi(x) \coloneqq k(x,\cdot)$.
 \end{assumplist}
 \setcounter{contlist}{\value{enumi}}
 % \asnote{Can we extend outside of the population limit? no, locally sobolev}
-\Cref{ass:T1} is called Talagrand's inequality T1 and is satisfied if and only if there exist $a \in \X$ and $\beta > 0$ s.t. $\int \exp(\beta \|x-a\|^2)d\pi(x) < \infty,$ see~\cite[Theorem 22.10]{villani2008optimal}.
+\Cref{ass:T1} is called Talagrand's inequality T1 and is satisfied if and only if there exist $a \in \X$ and $\beta > 0$ s.t. $\int \exp(\beta \|x-a\|^2)d\pi(x) < \infty,$ see~\cite[Theorem 22.10]{villani2008optimal}. Therefore, \Cref{ass:T1} is essentially an assumption about the tail of $\pi$.
 
 \section{SVGD}
 In this section, we analyze SVGD in the infinite number of particles regime. In this regime, SVGD is given by
